# netlistsvg

./: .gitignore  compare_up3down5.js  generate_cpp_from_json.js  generate_js_svg.js  generate_up3down5_svg.js  generate_up3down5_svg_with_edges.js  run_elk_debug.js  run_elk_direct.js  test_up3down5.js
built/: index.js
elk-cpp/: API_USAGE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  LAYOUT_SETUP_GUIDE.md  PORTING_PLAN.md  README.md  TESTING.md
elk-cpp/docs/: edge_routing_analysis.md
elk-cpp/examples/: advanced_features.cpp  complex_test.cpp  json_test.cpp  multilayer_test.cpp  netlistsvg_test.cpp  port_misaligned_test.cpp  port_separation_test.cpp  simple_example.cpp  svg_output_test.cpp  test_all_features.cpp  up3down5_test.cpp
elk-cpp/include/elk/alg/: all_algorithms.h
elk-cpp/include/elk/alg/common/: comments.h  compaction.h  edge_routing.h  incremental.h  label_placement.h  node_spacing.h  port_constraints.h
elk-cpp/include/elk/alg/force/: force_layout.h
elk-cpp/include/elk/alg/layered/: layered_layout.h  lgraph.h
elk-cpp/include/elk/alg/layered/crossing/: greedy_switch.h  median_heuristic.h
elk-cpp/include/elk/alg/layered/p5edges/: base_routing_direction_strategy.h  hyper_edge_cycle_detector.h  hyper_edge_segment.h  hyper_edge_segment_dependency.h  hyper_edge_segment_splitter.h  orthogonal_edge_router.h  orthogonal_routing_generator.h  routing_direction.h  west_to_east_routing_strategy.h
elk-cpp/include/elk/alg/layered/placement/: brandes_koepf.h  network_simplex.h
elk-cpp/include/elk/alg/mrtree/: mrtree_layout.h
elk-cpp/include/elk/alg/rectpacking/: rectpacking_layout.h
elk-cpp/include/elk/core/: configuration.h  layout_provider.h  properties.h  recursive_layout.h  types.h
elk-cpp/include/elk/graph/: graph.h
elk-cpp/src/alg/common/: comments.cpp  compaction.cpp  edge_routing.cpp  incremental.cpp  label_placement.cpp  node_spacing.cpp  port_constraints.cpp
elk-cpp/src/alg/force/: force_layout.cpp
elk-cpp/src/alg/layered/: layered_layout.cpp  lgraph.cpp
elk-cpp/src/alg/layered/crossing/: greedy_switch.cpp  median_heuristic.cpp
elk-cpp/src/alg/layered/p5edges/: base_routing_direction_strategy.cpp  hyper_edge_cycle_detector.cpp  hyper_edge_segment.cpp  hyper_edge_segment_dependency.cpp  hyper_edge_segment_splitter.cpp  orthogonal_edge_router.cpp  orthogonal_routing_generator.cpp  west_to_east_routing_strategy.cpp
elk-cpp/src/alg/layered/placement/: brandes_koepf.cpp  network_simplex.cpp
elk-cpp/src/alg/mrtree/: mrtree_layout.cpp
elk-cpp/src/alg/rectpacking/: rectpacking_layout.cpp
elk-cpp/src/core/: configuration.cpp  recursive_layout.cpp
elk-cpp/src/graph/: graph.cpp
elk-cpp/test_output/: comparison.html  up3down5_comparison.html
lib/: index.ts
(+206 files in other folders)
